tests/unhandled-op.m31

data x 0

constant A : Type
constant a b : A
constant (+) : A -> A -> A

operation Not_found 0

fail Not_found

operation info 3

fail info (!! x) (a + b) (fun x => x)

